--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
     <!-- Instructions -->
     <div class="row text-center">
-      <div class="col-sm-12" style="font-size: 20px;">
+      <div class="col-sm-12">
         Press any key to start!
       </div>
     </div>
@@ -49,13 +49,33 @@
     </div>
 
     <!-- Gameplay -->
-    <div id="gameplay" class="row text-center">
+
+    <div id="gameplay" class="row text-center rounded">
+
+      <!-- LEFT CONTAINER -->
       <div id="game-left" class="col-sm-6">
         <div id="characters" class="row">
           <!-- Images appended here -->
         </div>
       </div>
-      <div id="game-right" class="col-sm-6"></div>
+
+      <!-- RIGHT CONTAINER -->
+      <div id="game-right" class="col-sm-6">
+
+        <div class="row">
+          <div class="col-sm-12" style="padding: 10px;">
+            CURRENT WORD
+          </div>
+        </div>
+
+        <div class="row text-center">
+          <div id="word" class="col-sm-12 rounded">
+            <!-- Words appended here -->
+          </div>
+        </div>
+
+
+      </div>
     </div>
 
   </div>
