added letters  guessed JS and CSS

--- a/index.html
+++ b/index.html
@@ -96,7 +96,13 @@
         <!-- Guessed Letters -->
         <div id="guessed-letters-row" class="row">
           <div class="col-12">
-            Letters Already Guessed: <span id="guessed-leters"></span>
+            Letters Already Guessed:
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-12">
+              <span id="guessed-letters"></span>
           </div>
         </div>
 
