fixed double letter issue and added more game functions

--- a/index.html
+++ b/index.html
@@ -78,11 +78,11 @@
         <div id="score" class="row rounded">
           <!-- Wins -->
           <div class="col-6">
-            Wins: 
+            Wins: <span id="wins"></span>
           </div>
           <!-- Losses -->
           <div class="col-6">
-            Losses: 
+            Losses: <span id="losses"></span>
           </div>
         </div>
 
